# a2a-rust

./: Cargo.toml  README.md
examples/: TESTING_INTEROPERABILITY.md  rust_client.rs  rust_server.rs
examples/grpc/: python_client_test.py  python_server_test.py  rust_client_test.rs  rust_server_test.rs
examples/push_notification/: README.md  a2a_server.rs  client_with_webhook.rs
examples/rest/: python_client_test.py  python_server_test.py  rust_client_test.rs  rust_server_test.rs
src/a2a/: core_types.rs  models.rs
src/a2a/client/: client_trait.rs  factory.rs
src/a2a/client/transports/: grpc.rs  jsonrpc.rs  rest.rs
src/a2a/extensions/: common.rs
src/a2a/grpc/: a2a_pb2.rs  mod.rs
src/a2a/server/: mod.rs
src/a2a/server/apps/jsonrpc/: mod.rs
src/a2a/server/events/: event_queue.rs  in_memory_queue.rs  in_memory_queue_manager.rs  queue_manager.rs
src/a2a/server/request_handlers/: jsonrpc_handler.rs  request_handler.rs  rest_handler.rs
src/a2a/server/tasks/: sql_push_notification_config_store.rs  task_manager.rs  task_store.rs
src/a2a/utils/: mod.rs  proto_utils.rs
tests/: client_factory_integration_test.rs  push_integration_test.rs  sse_integration_test.rs  transport_integration_test.rs
tests/common/: mod.rs
