[package]
name = "a2a-rust"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the A2A (Agent-to-Agent) protocol"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
url = { version = "2.0", features = ["serde"] }
base64 = "0.21"
async-trait = "0.1"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3.31"
tracing = "0.1.44"
# HTTP server dependencies
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
headers = "0.4"
async-stream = "0.3"
# HTTP client dependencies
reqwest = { version = "0.11", features = ["json", "stream"] }
eventsource-client = "0.11"
# Additional utilities
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "sqlite", "json", "chrono", "uuid"] }
# Encryption
aes-gcm = "0.10"
base64ct = "=1.6.0"

[dev-dependencies]
tokio-test = "0.4"
serde_test = "1.0"
mockito = "1.4"

[features]
default = []
grpc = []
jsonrpc = []
rest = []
